2007-11-30  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.Editor.UI/RootDesignerView.cs, Makefile.am:
	  Depend on GeckoWebBrowser now that the MozillaControl has beeen removed
	  from core.

2007-11-05  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.Integration/AspNetEditViewContent.cs,
	  AspNetEdit.Integration/MonoDevelopProxy.cs: Fix build.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.Integration/MonoDevelopProxy.cs: Use RootCombine instead of
	  CurrentOpenCombine when possible.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp: Project file names updated by change in MD path functions.

2007-10-01  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am ($(ASSEMBLY)): Use $(build_resources) not $(RES).

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.addin.xml: Bump MD version.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Track API changes.

2007-09-13  Michael Hutchinson <mhutchinson@novell.com> 

	Move (now trivial) JSCall# library into MD SVN rather than 
	distributing binary.
	
	* AspNetEdit.mdp, Makefile.am, chrome/Makefile.am: Updated.
	* AspNetEdit.JSCall/InvalidJSArgumentException.cs, 
	  AspNetEdit.JSCall/CommandManager.cs,
	  chrome/content/aspdesigner/JSCall.js: Added.
	* libs/jscall.dll, libs/JSCall.js: Removed.

2007-09-05  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.addin.xml: Add missing dependency.

2007-09-01  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* AspNetEdit.Editor/EditorHost.cs: Fix ambiguous reference with  
	  System.ComponentModel.Design.EventBindingService, which is now 
	  implemented in Mono SVN class library.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp, Makefile.am, AspNetEdit.addin.xml: Reorganized the