@@ -1,0 +1,16 @@
+<Combine name="AspNetEdit" fileversion="2.0">
+  <Configurations active="Debug">
+    <Configuration name="Debug" ctype="CombineConfiguration">
+      <Entry build="True" name="AspNetEdit" configuration="Debug" />
+    </Configuration>
+    <Configuration name="Release" ctype="CombineConfiguration">
+      <Entry build="True" name="AspNetEdit" configuration="Release" />
+    </Configuration>
+  </Configurations>
+  <StartMode startupentry="AspNetEdit" single="True">
+    <Execute type="None" entry="AspNetEdit" />
+  </StartMode>
+  <Entries>
+    <Entry filename="AspNetEdit.mdp" />
+  </Entries>
+</Combine>
